Fix StatisticsRecorder to handle re-entry during tests.

BUG=592747

Review URL: https://codereview.chromium.org/1779503002

Cr-Commit-Position: refs/heads/master@{#386119}

Former-commit-id: b113b974a0cc071bd9822b499975307529eac294